Release gate: converge Windows installers on canonical staging